[build-system]
requires = [
	"diskcache",
	"httpx",
	"numpy",
	"pandas",
	"sqlite3",
	"time"
]

[tool.poetry]
packages = [
	{ include = "cache" },
	{ include = "snc" },
	{ include = "swimrankings" },
	{ include = "utils" },
	{ include = "wps" }
]

[project]
name = "mceUtilities"
version = "0.1.0"
description = "a small collection of utility funcs, consts and snippets I use more than once"

