[build-system]
requires = [
	"diskcache>=5.6.3",
	"httpx>=0.24.1",
	"numpy>=1.24.4",
	"pandas>=2.1.0"
]

[tools.setuptools]
packages = [
	{ include = "cache" },
	{ include = "snc" },
	{ include = "swimrankings" },
	{ include = "utils" },
	{ include = "wps" }
]

[project]
name = "mceUtilities"
version = "0.1.0"
description = "a small collection of utility funcs, consts and snippets I use more than once"

