[build-system]
requires = [
	"diskcache>=5.6.3",
	"httpx>=0.24.1",
	"numpy>=1.24.4",
	"pandas>=2.1.0",
	"setuptools>=68.1.2"
]

[tools.setuptools.packages.find]
where  = ["."]
namespaces = false

[project]
name = "mceUtilities"
version = "0.1.0"
description = "a small collection of utility funcs, consts and snippets I use more than once"

